Thu Jul 13 22:10:21 EEST 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Optimized packet reception. MAC computation and checking is now
	  also more optimized.  A lot previously duplicated code is now
	  used as generic by both client and server.

	* Fixed key pair generation in clientutil.c

Wed Jul 12 18:28:07 EEST 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added into lib/silccore/silcbufutil.[ch] new function;
	  silc_buffer_realloc.

	* Moved generic packet sending/encryption functions to 
	  lib/silccore/silcpacket.[ch] from client and server.  Some
	  rewriting of the functions.

	* Moved all generic packet reception/decryption functions to
	  lib/silccore/silcpacket.[ch] from client and server.  The
	  packet processing is now much cleaner in both client and server.
	  These were major changes in both client and server.

	* Created many common functions in server to do packet sending.
	  Previously code were duplicated a lot, this has been removed
	  with these changes.

Tue Jul 11 20:27:26 EEST 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Rewrote major parts of the ID cache system.  Don't know 
	  whether it is better now or not but at least the API is more
	  cleaner now.

	* Major rewrite on ID cache stuff on client because of the ID
	  cache API changes.  Added idlist.c to client.

	* Also major rewrite on ID cache stuff on server as well.
	  Major rewrite of idlist.[ch]. SilcXXXList's are now named
	  SilcXXXEntry's.  We won't keep anymore idlist specific pointers
	  in hand, instead they are all put into the ID cache system now.
	  All server_idlist_* routines uses ID cache now instead of
	  traversing its own lists (those lists does not exist anymore).
	  SilcIDList though still exists.  Also, SilcXXXEntry's are
	  now pointers.

Sun Jul  9 15:19:24 EEST 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Finally made the SKE implementation compliant to the protocol
	  specification.  All mp integers are now binary encoded as